[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3.5"
hmac = "0.12.1"
sha2 = "0.10.2"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = [
	"postgres",
	"runtime-tokio-rustls",
	"chrono",
	"macros",
	"rust_decimal",
] }
sqlx-core = "0.7.2"
blake2 = "0.10.6"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1.0.44"
chrono = { version = "0.4.26", features = ["serde", "clock"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
futures = "0.3.28"
serde_repr = "0.1"
serde_with = "3.1"
utoipa = { version = "3", features = ["chrono", "decimal"] }
utoipa-swagger-ui = "3.1.5"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
jwt = "0.16.0"
http = "0.2.8"
base64 = "0.21"
qrcode-generator = "4.1.9"
dexscreener = { git = "https://github.com/GreekKeepers/dexscreener.git", branch = "main" }
thedex = { git = "https://github.com/GreekKeepers/TheDex", branch = "main" }
p2way = { git = "https://github.com/GreekKeepers/P2Way", branch = "main" }
hcaptcha = { git = "https://github.com/GreekKeepers/hCaptcha", branch = "main" }
billine = { git = "https://github.com/GreekKeepers/billine.git", branch = "main" }
hex = "0.4.3"
async-channel = "2.2.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12.2", features = ["json"]}
strum = { version = "0.26.2", features = ["derive"] }
